fix data, locale